# tokio-websockets

./: .codespellrc  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  index.html  rustfmt.toml
.cargo/: config  config.toml  config.toml.msrv
.github/workflows/: autobahn.yml  bench.yml  ci.yml
.gram/: settings.jsonc
autobahn/: validate.py
autobahn/config/: fuzzingclient-avx2.json  fuzzingclient.json  fuzzingserver.json
benches/: Dockerfile  README.md  render.sh  run.js  run.py  run.sh
clients/: index.html  index.json  tokio_tungstenite_case_10_1_1.html  tokio_tungstenite_case_10_1_1.json  tokio_tungstenite_case_1_1_1.html  tokio_tungstenite_case_1_1_1.json  tokio_tungstenite_case_1_1_2.html  tokio_tungstenite_case_1_1_2.json  tokio_tungstenite_case_1_1_3.html  tokio_tungstenite_case_1_1_3.json  tokio_tungstenite_case_1_1_4.html  tokio_tungstenite_case_1_1_4.json  tokio_tungstenite_case_1_1_5.html  tokio_tungstenite_case_1_1_5.json  tokio_tungstenite_case_1_1_6.html  tokio_tungstenite_case_1_1_6.json  tokio_tungstenite_case_1_1_7.html  tokio_tungstenite_case_1_1_7.json  tokio_tungstenite_case_1_1_8.html  tokio_tungstenite_case_1_1_8.json  tokio_tungstenite_case_1_2_1.html  tokio_tungstenite_case_1_2_1.json  tokio_tungstenite_case_1_2_2.html  tokio_tungstenite_case_1_2_2.json  tokio_tungstenite_case_1_2_3.html  tokio_tungstenite_case_1_2_3.json  tokio_tungstenite_case_1_2_4.html  tokio_tungstenite_case_1_2_4.json  tokio_tungstenite_case_1_2_5.html  tokio_tungstenite_case_1_2_5.json  tokio_tungstenite_case_1_2_6.html  tokio_tungstenite_case_1_2_6.json  tokio_tungstenite_case_1_2_7.html  tokio_tungstenite_case_1_2_7.json  tokio_tungstenite_case_1_2_8.html  tokio_tungstenite_case_1_2_8.json  tokio_tungstenite_case_2_1.html  tokio_tungstenite_case_2_1.json  tokio_tungstenite_case_2_10.html  tokio_tungstenite_case_2_10.json  (+4176 more)
examples/: autobahn_client.rs  autobahn_client_tungstenite.rs  autobahn_server.rs  autobahn_server_tungstenite.rs  client.rs  echo-server.rs  echo_server.rs  native_tls_self_signed_client.rs  rustls_client.rs  rustls_server.rs  selfsigned-cert.sh  selfsigned_cert.sh  server.rs  utf8_benchmark_client.rs  utf8_benchmark_server.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  stream.rs
scripts/: autobahn_client.sh  autobahn_client_ci.sh  autobahn_server.sh  autobahn_server_ci.sh  benchmark.sh
servers/: index.html  index.json  tokio_tungstenite_case_10_1_1.html  tokio_tungstenite_case_10_1_1.json  tokio_tungstenite_case_12_1_1.html  tokio_tungstenite_case_12_1_1.json  tokio_tungstenite_case_12_1_10.html  tokio_tungstenite_case_12_1_10.json  tokio_tungstenite_case_12_1_11.html  tokio_tungstenite_case_12_1_11.json  tokio_tungstenite_case_12_1_12.html  tokio_tungstenite_case_12_1_12.json  tokio_tungstenite_case_12_1_13.html  tokio_tungstenite_case_12_1_13.json  tokio_tungstenite_case_12_1_14.html  tokio_tungstenite_case_12_1_14.json  tokio_tungstenite_case_12_1_15.html  tokio_tungstenite_case_12_1_15.json  tokio_tungstenite_case_12_1_16.html  tokio_tungstenite_case_12_1_16.json  tokio_tungstenite_case_12_1_17.html  tokio_tungstenite_case_12_1_17.json  tokio_tungstenite_case_12_1_18.html  tokio_tungstenite_case_12_1_18.json  tokio_tungstenite_case_12_1_2.html  tokio_tungstenite_case_12_1_2.json  tokio_tungstenite_case_12_1_3.html  tokio_tungstenite_case_12_1_3.json  tokio_tungstenite_case_12_1_4.html  tokio_tungstenite_case_12_1_4.json  tokio_tungstenite_case_12_1_5.html  tokio_tungstenite_case_12_1_5.json  tokio_tungstenite_case_12_1_6.html  tokio_tungstenite_case_12_1_6.json  tokio_tungstenite_case_12_1_7.html  tokio_tungstenite_case_12_1_7.json  tokio_tungstenite_case_12_1_8.html  tokio_tungstenite_case_12_1_8.json  tokio_tungstenite_case_12_1_9.html  tokio_tungstenite_case_12_1_9.json  (+6166 more)
src/: client.rs  error.rs  http.rs  lib.rs  mask.rs  proto.rs  rand.rs  resolver.rs  server.rs  sha.rs  tls.rs  upgrade.rs  utf8.rs
src/extensions/: error.rs  mod.rs  parser.rs  permessage_deflate.rs
src/proto/: codec.rs  error.rs  mod.rs  stream.rs  types.rs
src/upgrade/: client_request.rs  mod.rs  server_response.rs
tests/: autobahn_client.rs  cancellation_safety.rs  client_is_send.rs  issue106.rs  pr102_regression.rs  pr117_regression.rs  utf8_validation.rs
