[package]
name = "tokio-websockets"
version = "0.3.3"
edition = "2021"
description = "High performance, strict, tokio-util based websockets implementation"
repository = "https://github.com/Gelbpunkt/tokio-websockets/"
rust-version = "1.64"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures-core = "0.3"
futures-sink = "0.3"
tokio = "1"
tokio-util = { version = "0.7.1", features = ["codec", "io"] }

# SHA-1 fallback when no TLS is enabled
sha1_smol = { version = "1.0", optional = true }

# Randomness providers
fastrand = { version = "2.0", default-features = false, features = ["std"], optional = true }
getrandom = { version = "0.2", default-features = false, optional = true }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }

# SIMD
simdutf8 = { version = "0.1", default-features = false, features = ["std"], optional = true }

# Client
base64 = { version = "0.21", optional = true }
http = { version = "0.2", default-features = false, optional = true }
http-body = { version = "0.4", default-features = false, optional = true }
httparse = { version = "1.6", optional = true }

# Native TLS
tokio-native-tls = { version = "0.3", optional = true }

# Rustls
ring = { version = "0.16", default-features = false, optional = true }
rustls-native-certs = { version = "0.6", optional = true }
tokio-rustls = { version = "0.24", optional = true }
webpki-roots = { version = "0.25", optional = true }
webpki = { package = "rustls-webpki", version = "0.101", optional = true }

# Users can manually tune into OpenSSL for SHA-1 when native-tls is enabled
openssl = { version = "0.10", default-features = false, optional = true }

[features]
client = ["dep:base64", "dep:http", "dep:httparse", "tokio/net", "tokio/io-util", "tokio/rt"]
http-integration = ["dep:http-body"]
server = ["dep:base64", "dep:http", "dep:httparse", "tokio/io-util"]
simd = ["dep:simdutf8"]
native-tls = ["dep:tokio-native-tls"]
rustls-webpki-roots = ["dep:tokio-rustls", "ring", "dep:webpki", "dep:webpki-roots"]
rustls-native-roots = ["dep:tokio-rustls", "ring", "dep:rustls-native-certs"]

[dev-dependencies]
futures-util = { version = "0.3.14", default-features = false, features = ["sink"] }
# For tests
hyper = { version = "0.14", default-features = false, features = ["client", "http1", "tcp"] }
rustls-pemfile = "1"
tokio = { version = "1", default-features = false, features = ["net", "macros", "rt-multi-thread"] }
tokio-rustls = "0.24"

[[example]]
name = "autobahn_client"
required-features = ["client"]

[[example]]
name = "autobahn_server"
required-features = ["server"]

[[example]]
name = "client"
required-features = ["client"]

[[example]]
name = "native_tls_self_signed_client"
required-features = ["client", "native-tls"]

[[example]]
name = "rustls_server"
required-features = ["server"]

[[example]]
name = "server"
required-features = ["server"]

[[example]]
name = "utf8_benchmark_client"
required-features = ["client"]

[[example]]
name = "utf8_benchmark_server"
required-features = ["server"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
